--- a/srcs/.env
+++ b/srcs/.env
@@ -5,3 +5,9 @@
 	MYSQL_ROOT_PASSWORD=XXXXXXXXXX
 	MYSQL_USER=XXXXXXXXXX
 	MYSQL_PASSWORD=XXXXXXXXXX
+	# MARIADB ENV
+	WORDPRESS_MARIADB_HOST
+	MARIADB_DATABASE
+	MARIADB_CHARSET
+	MARIADB_COLLATE
+	MARIADB_USER
