--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,10 +1,6 @@
 FROM debian:buster
 
-#temp
-ENV SQL_DATABASE="data"
-ENV SQL_USER="user"
-ENV SQL_PASSWORD="1234"
-ENV SQL_ROOT_PASSWORD ="1234"
+EXPOSE	3306
 
 RUN apt update -y && apt upgrade -y
 RUN apt-get install mariadb-server -y
