--- a/srcs/.env
+++ b/srcs/.env
@@ -1,13 +1,16 @@
-	DOMAIN_NAME=cpapot.42.fr
-	# certificates
-	CERTS_=./XXXXXXXXX
-	# MYSQL SETUP
-	MYSQL_ROOT_PASSWORD=XXXXXXXXXX
-	MYSQL_USER=XXXXXXXXXX
-	MYSQL_PASSWORD=XXXXXXXXXX
-	# MARIADB ENV
-	WORDPRESS_MARIADB_HOST
-	MARIADB_DATABASE
-	MARIADB_CHARSET
-	MARIADB_COLLATE
-	MARIADB_USER
+	SQL_DATABASE="data"
+	SQL_USER="user"
+	SQL_PASSWORD="1234"
+	SQL_ROOT_PASSWORD ="1234"
+	SQL_DATABASE="data"
+	SQL_USER="user"
+	SQL_PASSWORD="1234"
+	SQL_ROOT_PASSWORD ="1234"
+	SQL_DB_HOST="mariadb:3306"
+	WP_URL="cpapot.42.fr"
+	WP_ADMIN_LOGIN="cpapROOT"
+	WP_ADMIN_PASSWORD="ROOT4221cpap"
+	WP_ADMIN_EMAIL="cpapotROOT@42.fr"
+	WP_USER_LOGIN="cpapot"
+	WP_USER_PASSWORD="cpapot4221"
+	WP_USER_EMAIL="cpapot@42.fr"
