--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,6 +1,11 @@
+deamon off;
+
+http {
+	include /etc/nginx/mine.types;
+
 	server {
 		# SSL/TLS
-		listen	443;
+		listen	443 default_server;
 
 		ssl on;
 		ssl_protocols TLSv1.2 TLSv1.3;
@@ -9,14 +14,9 @@
 
 		root /var/www/html;
 		server_name cpapot.42.fr;
+		index index.php index.html;
 
 		# serve static files
-		location /  {
-			try_files $uri $uri/ =404;
-			index		index.php index.html;
-			autoindex	on;
-		}
-
 		location ~ \`.php$ {
 			try_files $uri $uri/ =404;
 			include		fastcgi_params;
@@ -26,5 +26,14 @@
 			fastcgi_param	SCRIPT_NAME $fastcgi_script_name;
 			fastcgi_param	PATH_INFO $fastcgi_path_info;
 		}
-}
 
+		location = /wp-login.php {
+		root	/srv/http;
+		allow	127.0.0.1;
+		deny	all;
+		fastcgi_pass	unix:/run/php-fpm/php-fpm.sock;
+		fastcgi_index	index.php;
+		include        fastcgi.conf;
+		}
+	}
+}
