--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -7,10 +7,10 @@ RUN apt-get install -y apt-transport-https && apt install -y nginx
 RUN apt install vim -y && apt install curl -y && apt-get install openssl libssl-dev -y
 RUN mkdir -p /etc/nginx/ssl && mkdir -p /var/run/nginx
 
-COPY conf/nginx.conf /etc/nginx/sites-enabled/default
+COPY conf/nginx.conf /etc/nginx/nginx.conf
 
-RUN openssl req -x509 -nodes -out /etc/nginx/ssl/inception.crt -keyout /etc/nginx/ssl/inception.key -subj "/C=FR/ST=IDF/L=Lyon/O=42/OU=42/CN=cpapot.42.fr/UID=cpapot"
+RUN openssl req -x509 -nodes -out /etc/ssl/certs/nginx.crt -keyout /etc/ssl/private/nginx.key -subj "/C=FR/ST=IDF/L=Lyon/O=42/OU=42/CN=cpapot.42.fr/UID=cpapot"
 RUN chmod 755 /var/www/html
 RUN exec "$@"
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["nginx"]
