--- a/srcs/.env
+++ b/srcs/.env
@@ -1,12 +1,14 @@
-	SQL_DATABASE="data"
+	SQL_DATABASE="inceptionDB"
 	SQL_USER="user"
 	SQL_PASSWORD="1234"
 	SQL_ROOT_PASSWORD ="1234"
 	SQL_DB_HOST="mariadb:3306"
-	WP_URL="cpapot.42.fr"
+
+	WP_URL="localhost"
 	WP_ADMIN_LOGIN="cpapROOT"
 	WP_ADMIN_PASSWORD="ROOT4221cpap"
 	WP_ADMIN_EMAIL="cpapotROOT@42.fr"
 	WP_USER_LOGIN="cpapot"
+
 	WP_USER_PASSWORD="cpapot4221"
 	WP_USER_EMAIL="cpapot@42.fr"
