--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,39 +1,29 @@
-deamon off;
+worker_processes auto;
+daemon off;
+
+events {
+    worker_connections 1024;
+}
 
 http {
-	include /etc/nginx/mine.types;
 
 	server {
-		# SSL/TLS
-		listen	443 default_server;
+		server_name cpapot.42.fr;
 
-		ssl on;
+		# SSL/TLS
+		listen	443 ssl;
+
 		ssl_protocols TLSv1.2 TLSv1.3;
 		ssl_certificate /etc/ssl/certs/nginx.crt;
 		ssl_certificate_key /etc/ssl/private/nginx.key;
 
 		root /var/www/html;
-		server_name cpapot.42.fr;
-		index index.php index.html;
 
 		# serve static files
 		location ~ \`.php$ {
-			try_files $uri $uri/ =404;
-			include		fastcgi_params;
+			index index.php index.html;
+			include		snippets/fastcgi-php.conf;
 			fastcgi_pass wordpress:9000;
-			fastcgi_index	index.php;
-			fastcgi_param	SCRIPT_FILENAME $document_root$fastcgi_script_name;
-			fastcgi_param	SCRIPT_NAME $fastcgi_script_name;
-			fastcgi_param	PATH_INFO $fastcgi_path_info;
-		}
-
-		location = /wp-login.php {
-		root	/srv/http;
-		allow	127.0.0.1;
-		deny	all;
-		fastcgi_pass	unix:/run/php-fpm/php-fpm.sock;
-		fastcgi_index	index.php;
-		include        fastcgi.conf;
 		}
 	}
 }
