--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -9,15 +9,14 @@ RUN apt-get update -y && apt-get upgrade -y
 RUN apt-get -y install wget && apt-get -y install vim && apt-get -y install curl
 RUN apt-get install -y php7.3 php-fpm php-mysql mariadb-client
 
-#Setting up wordpress
-RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
-RUN chmod +x wp-cli.phar
-RUN		cp wp-cli.phar /usr/bin/wp
+COPY conf/www.conf /etc/php/7.3/fpm/pool.d/www.conf
 
-COPY conf/www.conf /etc/php/7.3/fpm/pool.d
+#Setting up wordpress
+RUN wget https://github.com/wp-cli/wp-cli-bundle/releases/download/v2.7.0/wp-cli-2.7.0.phar
+RUN chmod +x wp-cli-2.7.0.phar
+RUN	cp wp-cli-2.7.0.phar /usr/bin/wp
 
 COPY conf/configWP.sh ./configWP.sh
 RUN chmod 777 ./configWP.sh
-ENTRYPOINT [ "./configWP.sh" ]
 
-CMD		["/usr/sbin/php-fpm7.3", "--nodaemonize"]
+CMD		["bash", "./configWP.sh"]
