--- a/srcs/.env
+++ b/srcs/.env
@@ -4,6 +4,7 @@
 	SQL_ROOT_PASSWORD ="1234"
 	SQL_DB_HOST="mariadb:3306"
 
+	WP_NAME="WPinception"
 	WP_URL="localhost"
 	WP_ADMIN_LOGIN="cpapROOT"
 	WP_ADMIN_PASSWORD="ROOT4221cpap"
