--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -8,20 +8,19 @@ events {
 http {
 
 	server {
-		server_name cpapot.42.fr;
-
 		# SSL/TLS
 		listen	443 ssl;
+		server_name localhost;
 
 		ssl_protocols TLSv1.2 TLSv1.3;
 		ssl_certificate /etc/ssl/certs/nginx.crt;
 		ssl_certificate_key /etc/ssl/private/nginx.key;
 
-		root /var/www/html;
+		root /var/www/wordpress;
+		index index.php index.html;
 
 		# serve static files
 		location ~ \`.php$ {
-			index index.php index.html;
 			include		snippets/fastcgi-php.conf;
 			fastcgi_pass wordpress:9000;
 		}
