work exept admin

--- a/srcs/.env
+++ b/srcs/.env
@@ -4,12 +4,12 @@
 	SQL_ROOT_PASSWORD ="1234"
 	SQL_DB_HOST="mariadb:3306"
 
-	WP_NAME="WPinception"
-	WP_URL="localhost"
-	WP_ADMIN_LOGIN="cpapROOT"
-	WP_ADMIN_PASSWORD="ROOT4221cpap"
-	WP_ADMIN_EMAIL="cpapotROOT@42.fr"
-	WP_USER_LOGIN="cpapot"
+	WP_NAME="Cpapot's Inception"
+	WP_URL="cpapot.42.fr"
+	WP_ADMIN_LOGIN="cpapot"
+	WP_ADMIN_PASSWORD="RO0T"
+	WP_ADMIN_EMAIL="cpapot@student.42lyon.fr"
+	WP_USER_LOGIN="user"
 
-	WP_USER_PASSWORD="cpapot4221"
-	WP_USER_EMAIL="cpapot@42.fr"
+	WP_USER_PASSWORD="user1234"
+	WP_USER_EMAIL="corentinpapot2004@gmail.com"
