--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -10,15 +10,15 @@ volumes:
     driver: local
     name: wordpress
     driver_opts:
-      type: none
-      o: bind
+      type: 'none'
+      o: 'bind'
       device: $HOME/data/wordpress
   mariadb:
     driver: local
     name: mariadb
     driver_opts:
-      type: none
-      o: bind
+      type: 'none'
+      o: 'bind'
       device: $HOME/data/mariadb
 
 
