--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -6,21 +6,22 @@ events {
 }
 
 http {
+	include /etc/nginx/mime.types;
 
 	server {
 		# SSL/TLS
 		listen	443 ssl;
 		server_name localhost;
 
-		ssl_protocols TLSv1.2 TLSv1.3;
 		ssl_certificate /etc/ssl/certs/nginx.crt;
 		ssl_certificate_key /etc/ssl/private/nginx.key;
+		ssl_protocols TLSv1.2 TLSv1.3;
 
 		root /var/www/wordpress;
 		index index.php index.html;
 
 		# serve static files
-		location ~ \`.php$ {
+		location ~ \.php$ {
 			include		snippets/fastcgi-php.conf;
 			fastcgi_pass wordpress:9000;
 		}
