--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -15,7 +15,7 @@ COPY conf/www.conf /etc/php/7.3/fpm/pool.d/www.conf
 #Setting up wordpress
 RUN wget https://github.com/wp-cli/wp-cli-bundle/releases/download/v2.7.0/wp-cli-2.7.0.phar
 RUN chmod +x wp-cli-2.7.0.phar
-RUN	cp wp-cli-2.7.0.phar /usr/bin/wp
+RUN	mv wp-cli-2.7.0.phar /usr/bin/wp
 
 COPY conf/configWP.sh ./configWP.sh
 RUN chmod 777 ./configWP.sh
