--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -4,8 +4,6 @@ EXPOSE	9000
 
 #Update docker
 RUN apt-get update -y && apt-get upgrade -y
-
-#Setting up the docker
 RUN apt-get -y install wget && apt-get -y install vim && apt-get -y install curl
 RUN apt-get install -y php7.3 php-fpm php-mysql mariadb-client
 RUN rm -rf /var/lib/apt/lists/*
@@ -20,4 +18,5 @@ RUN	mv wp-cli-2.7.0.phar /usr/bin/wp
 COPY conf/configWP.sh ./configWP.sh
 RUN chmod 777 ./configWP.sh
 
-CMD		["bash", "./configWP.sh"]
+ENTRYPOINT		["bash", "./configWP.sh"]
+CMD				["php-fpm7.3 -F"]
